Bug 76335 - Requirements are inaccurate (kernel >= v3.2 required)
Summary: Requirements are inaccurate (kernel >= v3.2 required)
Status: RESOLVED FIXED
Alias: None
Product: systemd
Classification: Unclassified
Component: general (show other bugs)
Version: unspecified
Hardware: Other All
: medium minor
Assignee: systemd-bugs
QA Contact: systemd-bugs
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-03-18 20:54 UTC by Michael Janssen
Modified: 2014-03-24 14:06 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Michael Janssen 2014-03-18 20:54:23 UTC
In systemd-211, systemd-nspawn doesn't compile with a kernel < v3.2, contrary to what the README says. 

The error I was getting was that LO_FLAGS_PARTSCAN is not found, which is introduced first in kernel v3.2

Removing systemd-nspawn references from the Makefile.am and rerunning automake makes it compile fine again. I don't use systemd-nspawn so this workaround worked for me.
Comment 1 Lennart Poettering 2014-03-19 00:15:49 UTC
Fixed in git.
Comment 2 Michael Janssen 2014-03-20 13:11:04 UTC
This bug isn't actually fixed.   

As I noted in the initial report, the LO_FLAGS_PARTSCAN was only the error that I was getting.  I worked around by just not compiling systemd-nspawn.  With current git master I still can't compile systemd-nspawn against kernel v3.0:

src/nspawn/nspawn.c: In function 'setup_image':
src/nspawn/nspawn.c:1908:29: error: 'LOOP_CTL_GET_FREE' undeclared (first use in this function)
src/nspawn/nspawn.c:1908:29: note: each undeclared identifier is reported only once for each function it appears in
src/nspawn/nspawn.c: In function 'loop_remove':
src/nspawn/nspawn.c:2314:24: error: 'LOOP_CTL_REMOVE' undeclared (first use in this function)
make[3]: *** [src/nspawn/systemd_nspawn-nspawn.o] Error 1
Comment 3 Lennart Poettering 2014-03-21 03:12:07 UTC
OK, added these missing definitions now too. Please verify.
Comment 4 Michael Janssen 2014-03-24 14:06:22 UTC
Compiles fine on my v3.0 tree now.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.