missing: define LO_FLAGS_PARTSCAN if it is missing

https://bugs.freedesktop.org/show_bug.cgi?id=76335